<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/enhancedMainFragment"
            android:icon="@drawable/ic_movie"
            android:title="@string/main_menu_title" />
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_new_releases_24"
            android:title="@string/today" />
    </group>

    <item android:title="@string/nav_library">
        <menu>
            <item
                android:id="@+id/watchedFragment"
                android:icon="@drawable/ic_check_24"
                android:title="@string/nav_watched" />
            <item
                android:id="@+id/plannedFragment"
                android:icon="@drawable/ic_bookmark_filled_24"
                android:title="@string/nav_planned" />
            <item
                android:id="@+id/watchingFragment"
                android:icon="@drawable/ic_play_circle_24"
                android:title="@string/nav_watching" />
        </menu>
    </item>

    <item android:title="@string/nav_discover">
        <menu>
            <item
                android:id="@+id/calendarFragment"
                android:icon="@drawable/ic_calendar_24"
                android:title="@string/nav_calendar" />
            <item
                android:id="@+id/trendingFragment"
                android:icon="@drawable/ic_trending"
                android:title="@string/nav_trending" />
            <item
                android:id="@+id/topsFragment"
                android:icon="@drawable/ic_star_filled_24"
                android:title="@string/tops_title" />
            <item
                android:id="@+id/settingsFragment"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>